구조 및 제이쿼리 연결

--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>투두리스트</title>
   </head>
-  <body></body>
+  <body>
+    <h1>TODOLIST</h1>
+    <div class="input-container">
+      <input id="input-text" type="text" />
+      <button id="add">add</button>
+    </div>
+    <div class="list-container">
+      <ul>
+        <li>
+          <input type="checkbox" name="" id="" />
+          <span>할일</span>
+          <button>삭제</button>
+        </li>
+      </ul>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  </body>
 </html>
