버튼 클릭 이벤트 시도

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>TODOLIST</h1>
     <div class="input-container">
-      <input id="input-text" type="text" />
+      <input id="input-text" type="text" value="할 일을 적어주세요" />
       <button id="add">add</button>
     </div>
     <div class="list-container">
