li 및 버튼 생성

--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
   <body>
     <h1>TODOLIST</h1>
     <div class="input-container">
-      <input id="input-text" type="text" value="할 일을 적어주세요" />
+      <input id="input-text" type="text" value="" />
       <button id="add">add</button>
     </div>
     <div class="list-container">
-      <ul>
-        <li>
-          <input type="checkbox" name="" id="" />
-          <span>할일</span>
-          <button>삭제</button>
-        </li>
-      </ul>
+      <ul id="todo-list"></ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
