css연결 및 배경색

--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>투두리스트</title>
   </head>
   <body>
-    <h1>TODOLIST</h1>
-    <div class="input-container">
-      <input id="input-text" type="text" value="" />
-      <button id="add">add</button>
-    </div>
-    <div class="list-container">
-      <ul id="todo-list"></ul>
-    </div>
+    <main>
+      <h1>TODOLIST</h1>
+      <div class="input-container">
+        <input id="input-text" type="text" value="" />
+        <button id="add">add</button>
+      </div>
+      <div class="list-container">
+        <ul id="todo-list"></ul>
+      </div>
+    </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="main.js"></script>
   </body>
