js 가짜데이터 삭제

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
       <h1>TODOLIST</h1>
       <div class="input-container">
-        <input id="input-text" type="text" value="" />
+        <input id="input-text" type="text" />
         <button id="add">add</button>
       </div>
       <div class="list-container">
